--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,4 +30,11 @@
         android:layout_below="@id/seek_text"
         android:max="20" />
 
+    <SeekBar
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/zaxisvalue"
+        android:layout_below="@id/sensibility_bar"
+        android:max="20"/>
+
 </RelativeLayout>
