--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -55,6 +55,33 @@
         android:max="20"
         android:layout_below="@+id/z_axis_sensitivity_text_selection"/>
 
+    <!-- Delay between events -->
+    <TextView
+        android:id="@+id/delay_between_events_text"
+        android:text="Select the Delay:"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/z_axis_sensitivity_seekbar"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="@dimen/sensibility_seekbars_margin" />
+
+    <TextView
+        android:id="@+id/delay_between_events_text_value"
+        android:text="0/0"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/delay_between_events_seekbar"
+        android:layout_alignParentEnd="true" />
+
+    <SeekBar
+        android:id="@+id/delay_between_events_seekbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:max="100"
+        android:layout_below="@+id/delay_between_events_text"
+        android:layout_alignParentStart="true" />
+
+
     <!-- Magnetic sensitivity -->
     <TextView
         android:id="@+id/magnetic_sensitivity_text"
@@ -62,7 +89,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/sensibility_seekbars_margin"
-        android:layout_below="@+id/z_axis_sensitivity_seekbar" />
+        android:layout_below="@+id/delay_between_events_seekbar" />
 
     <TextView
         android:id="@+id/magnetic_sensitivity_text_value"
